--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,36 @@
 .nav-bar {
-    background: #3653d3;
-    width: 100%;
-    height: 50px    ; 
+  background: #3653d3;
+  width: 100%;
+  height: 50px;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
 
+li {
+  list-style-type: none;
+}
+
+.nav-bar a {
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 17px;
+  transition: 0.3s;
+}
+
+.nav-bar a:hover {
+  color: #ff0000;
+  text-decoration: none;
+}
+
+ul {
+  align-items: center;
+  height: 100%;
+  float: right;
+  justify-content: space-between;
+  width: 30%;
+  margin-right: 100px;
 }
