--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,11 +26,57 @@ li {
   text-decoration: none;
 }
 
-ul {
+.nav-bar ul {
   align-items: center;
   height: 100%;
   float: right;
   justify-content: space-between;
   width: 30%;
   margin-right: 100px;
+}
+
+.hero {
+  height: 700px;
+  position: relative;
+}
+
+.bg {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url(../img/car.jpg);
+  background-size: cover;
+}
+
+.black {
+  position: absolute;
+  background-color: #00000094;
+  height: 100%;
+  width: 100%;
+}
+
+.center-txt {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+h1 {
+  letter-spacing: 20px;
+}
+
+.btn1 {
+  margin-left: 200px;
+  margin-right: 200px;
+  background-color: rgba(0, 255, 255, 0.158);
+  color: aqua;
+  border: 2px solid aqua;
+  border-radius: 50px;
+}
+
+.btn1:hover {
+  color: #ff0000;
 }
