--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .nav-bar {
+  position: fixed;
   background: #3653d3;
   width: 100%;
   height: 50px;
+  z-index: 2;
 }
 
 * {
@@ -69,14 +75,19 @@ h1 {
 }
 
 .btn1 {
-  margin-left: 200px;
-  margin-right: 200px;
   background-color: rgba(0, 255, 255, 0.158);
   color: aqua;
   border: 2px solid aqua;
   border-radius: 50px;
+  transition: 0.5s;
 }
 
 .btn1:hover {
-  color: #ff0000;
+  color: #ffffff;
+  background-color: aqua;
+}
+
+.section-two {
+  height: 700px;
+  width: 100%;
 }
